API Done, comparator Not Done yet